--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native/virtualized-lists": "^0.75.2",
     "expo": "~51.0.28",
+    "expo-asset": "^10.0.10",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
